Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
         go build
 
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: cybertecpostgresql/pg_timetable
         username: ${{ secrets.DOCKER_USERNAME }}
